# asm198x

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  release-plz.toml
.github/workflows/: ci.yml
crates/asm198x/: CHANGELOG.md  Cargo.toml
crates/asm198x/src/: ast.rs  ast_spike.rs  contract.rs  dialect.rs  disasm.rs  engine.rs  lib.rs  listing.rs  main.rs  prg.rs  roundtrip_tests.rs  sna.rs  source.rs  span.rs
crates/asm198x/src/dialects/: acme.rs  asl.rs  ca65.rs  ca65_816.rs  ca65_flat.rs  ca65_huc6280.rs  cdp1802.rs  cp1610.rs  f8.rs  i8048.rs  i8080.rs  lwasm.rs  m6800.rs  mod.rs  mos6502.rs  pasmo.rs  pasmonext.rs  pdp11.rs  rgbasm.rs  s2650.rs  scmp.rs  sjasmplus.rs  tms7000.rs  tms9900.rs  vasm.rs  z80.rs  z8000.rs
crates/asm198x/tests/: cli_json.rs  conformance.rs  contract.rs  curriculum.rs  debug198x_fixtures.rs  debug_capture.rs  debug_cli.rs  differential.rs  fmt.rs  multifile.rs
crates/asm198x/tests/fixtures/debug198x/: 6502-c64.debug198x  6502-c64.s  6502-nes-multifile.debug198x  6502-nes-multifile.inc  6502-nes-multifile.s  6502-nes.debug198x  6502-nes.s  65816-sample.debug198x  65816-sample.s  68000-amiga.debug198x  68000-amiga.s  cp1610-intellivision.debug198x  cp1610-intellivision.s  spectrum128-banked-sld.md  spectrum128-banked.debug198x  spectrum128-banked.s  z80-spectrum-multifile.debug198x  z80-spectrum-multifile.inc  z80-spectrum-multifile.s  z80-spectrum.debug198x  z80-spectrum.s
crates/dbg198x/: Cargo.toml
crates/dbg198x/src/: lib.rs
crates/debug198x/: CHANGELOG.md  Cargo.toml
crates/debug198x/src/: lib.rs
crates/isa/: CHANGELOG.md  Cargo.toml
crates/isa-disasm/: CHANGELOG.md  Cargo.toml
crates/isa-disasm/src/: lib.rs
crates/isa/src/: cdp1802.rs  cp1610.rs  f8.rs  huc6280.rs  i8048.rs  i8080.rs  lib.rs  m6800.rs  m68k.rs  mos6502.rs  mos65816.rs  mos6809.rs  pdp11.rs  s2650.rs  scmp.rs  sm83.rs  tms7000.rs  tms9900.rs  z80.rs  z8000.rs
decisions/: 68000-isa-completeness.md  arm-staged-build.md  assemble-io-model.md  ast-native-payload-for-multipass-cisc.md  conditional-assembly-framework.md  core-contract-freeze.md  cp1610-staged-build.md  debug198x-format.md  disassembler-crate.md  formatter-canonical-style.md  huc6280-addition.md  packaging-and-cpu-roadmap.md  release-cadence.md  roadmap-sequencing.md  sm83-addition.md  spec-conformance-and-fuzzing.md  syntax-stance.md  why-not-llvm.md  z8000-staged-build.md
docs/ideation/: 2026-07-03-asm198x-world-class-ideation.html
docs/plans/: 2026-07-03-001-feat-debug-info-format-plan.md  2026-07-03-002-feat-verdict-pipeline-plan.md  2026-07-03-003-feat-core-contract-plan.md  2026-07-04-001-feat-language-surface-plan.md  2026-07-04-002-feat-cycle-analyzer-plan.md  2026-07-04-003-feat-dialect-converter-plan.md  2026-07-04-004-feat-docs-site-plan.md  2026-07-04-005-feat-ir-ast-layer-plan.md
examples/: countdown.s
