# Asm198x — a family of modern, single-binary assemblers and disassemblers
# for the 198x family's target CPUs. One workspace, many crates.
#
# Layout decision and the shared-ISA-spec architecture live in the umbrella
# decision record: ../decisions/asm198x-and-shared-isa-spec.md
#
# Build-time levers (baked in from line one so this never drifts toward the
# Emu198x `cargo test` pain — see ../decisions, "build-time" notes):
#   * default-members keeps a bare `cargo build`/`test` scoped to the CLI;
#   * [profile.dev] drops full debuginfo, the biggest `cargo test` link cost.
# Assemblers are featherweight (no wgpu/winit/audio), so this stays fast.

[workspace]
resolver = "2"
members = [
    "crates/isa",
    "crates/isa-disasm",
    "crates/debug198x",
    "crates/asm198x",
]
default-members = ["crates/asm198x"]

# External dependencies (the workspace's first — the debug-info crate warrants
# the ecosystem serializer; see crates/debug198x and the plan's KTD1). Kept here
# so versions are managed in one place.
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[workspace.package]
edition = "2024"
version = "0.0.7"
license = "GPL-2.0-or-later"
repository = "https://github.com/asm198x/asm198x"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
unwrap_used = "deny"

[profile.dev]
# Line tables give backtraces without the full-debuginfo link tax. This is
# the lever that matters most once a workspace grows many test binaries.
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.release]
lto = "thin"
codegen-units = 1

# cargo-dist release configuration. On a `v*` tag push (created by
# release-plz when its release PR merges), .github/workflows/release.yml
# builds the `asm198x` CLI for each target and attaches archives to a
# GitHub Release. Regenerate that workflow with `dist generate` after
# editing this section. The `isa` crate has no binary, so dist ignores it.
[workspace.metadata.dist]
cargo-dist-version = "0.32.0"
ci = "github"
installers = []
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
pr-run-mode = "plan"

[profile.dist]
inherits = "release"
lto = "thin"
