[package]
name = "asm198x"
description = "A family of modern, single-binary assemblers for retro CPUs. 6502 today; more to follow."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# One crate provides both the library API (`asm198x::assemble_6502`) and the
# `asm198x` binary (src/main.rs). The engine-vs-dialect crate split is deferred
# until a second CPU makes the seam real — see the umbrella decision record.

[dependencies]
# version (lockstep with the workspace) is required so `cargo package` can
# verify the manifest — release-plz runs it to compute the release diff, and
# path deps without a version fail packaging. release-plz keeps it in sync on
# each bump. Local builds use the path; the version is only for packaging.
isa = { path = "../isa", version = "0.0.4" }
isa-disasm = { path = "../isa-disasm", version = "0.0.4" }

[lints]
workspace = true
